<resources>
    <string name="app_name">HEAL</string>
    <string name="app_name_credits">from\nHNB</string>
    <string name="made_by">Created by HNB</string>
    <string name="title_activity_index_page">IndexPage</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="action_credits">Credits</string>
    <string name="menu_home">Home</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="name_fullform">Holistic and Energetic Approach to Life</string>
    <string name="psycho_heading">Mental State</string>
    <string name="physical_heading">Physical State</string>
    <string name="nutrition_heading">Nutrition</string>
    <string name="sleep_heading">Sleep Cycle</string>
    <string name="hygiene_heading">Hygiene</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="immunity">Immunity</string>
    <string name="appdev">App Developed By : </string>
    <string name="resmanage">Resource Managed By : </string>
    <string name="appidea">Idea Formulated By : </string>
    <string name="appdevname">Himesh Nayak</string>
    <string name="resmanagename">Haresh Nayak</string>
    <string name="appideaname">C P Nayak</string>
    <string name="info_heading">Information</string>
    <string name="psycho_info">
        <b>Meditation</b> improves the immune system, reduces blood pressure and even sharpens the mind, according to research. The practice - an essential part of Buddhist and Indian Yoga traditions - has entered the mainstream as people try to find ways to combat stress and improve their quality of life.\n
        As an individual becomes regular with practicing meditation, there is a visible increase in joy, peace, and enthusiasm. This happens because of the increased prana (life force energy) in the body.\n
        \n<b>On the physical level, meditation:</b>\n
        Lowers high blood pressure\n
        Lowers the levels of blood lactate, reducing anxiety attacks\n
        Decreases tension-related pain (headaches, ulcers, insomnia, muscle, and joint problems)\n
        Increases serotonin production that improves mood and behavior\n
        Strengthens the immune system\n
        Increases energy levels\n
    </string>
    <string name="physical_info">
        Yoga helps lower stress hormones that compromise the immune system, while also conditioning the lungs and respiratory tract, stimulating the lymphatic system to oust toxins from the body, and bringing oxygenated blood to the various organs to ensure their optimal function.\n
        \n<b>Benefits of Surya Namaskar (Sun Salutation)</b>\n
            Tones muscles and improves flexibility\n
            Great cardio training and hormonal balance\n
            Improves digestion and promotes weight loss\n
            Increases energy and awareness levels\n
            Enables Better Absorption of Nutrients\n
            Reduces moods swings and brings more emotional stability\n
            Improves Your Skin’s Glow\n
        \n<b>Benefits of Yog Mudrasana</b>\n
        Yoga Mudrasana brings flexibility to the back, spine and the hips.\n
        This asana tones all organs in the abdomen.\n
        It helps to relieve constipation and improves digestion.\n
        It activates the Manipuraka Chakra which helps to improve the general energy level of a person.\n
        \n<b>Benefits of Anulom Vilom</b>\n
        Helps to cure mental problems like Depression, Anxiety, stress, Tension etc.\n
        Most beneficial for breathing related problems like (Bronchitis, Asthma) etc.\n
        Improve the working of lungs.\n
        Best breathing technique for boosting your memory (Makes your brain sharper).\n
        Improves your immune system, so it cures general issues like a cough and cold.\n
        Alternate nostril breathing is an ideal breathing technique for maintaining your heart healthy.\n\n
        One should practice <b>Ashtang Yog (Yam, Niyam, Aasan, Pranayam, Pratyahaar, Dhyaan, Dhaarna, Samadhi)</b>.
    </string>
    <string name="nutrition_info">Feeding your body certain foods may help keep your immune system strong.\n
        Plan your meals to include the following powerful <u>immune system boosters.</u>\n
        \n<b>Citrus fruits</b>\n
        It helps build up your immune system. Vitamin C is thought to increase the production of white blood cells. These are key to fighting infections.\n
        Popular citrus fruits include grapes, oranges, lemons, etc.\n
        \n<b>Ginger</b>\n
        Ginger may help decrease inflammation, which can help reduce a sore throat and other inflammatory illnesses. Ginger may also help decrease nausea.\n
        \n<b>Spinach</b>\n
        Spinach is rich in vitamin C and is also packed with numerous antioxidants and beta carotene, which may increase the infection-fighting ability of our immune systems.\n
        \n<b>Yogurt</b>\n
        Yogurt is  a great source of vitamin D. Vitamin D helps regulate the immune system and is thought to boost our body’s natural defenses against diseases.\n
        \n<b>Turmeric</b>\n
        Turmeric can be used as an anti-inflammatory in treating both osteoarthritis and rheumatoid arthritis. Also, research shows that high concentrations of curcumin, which gives turmeric its distinctive color, can help decrease exercise-induced muscle damage.\n
        \n<b>Papaya</b>\n
        Papaya is another fruit loaded with vitamin C. You can find 224 percent of the daily recommended amount of vitamin C in a single papaya. Papayas also have a digestive enzyme called papain that has anti-inflammatory effects.\n
    </string>
    <string name="sleep_info">Lack of sleep can affect your immune system. Studies show that people who don\'t get quality sleep or enough sleep are more likely to get sick after being exposed to a virus, such as a common cold virus. Lack of sleep can also affect how fast you recover if you do get sick.\n
        <b>Yoga Nidra</b> is typically practised at the end of a physical yoga asana class, or it can be practised at home, remember to practice on a set day and time each week to feel the full benefits, and set a regular pattern.
        \n<b>Here are some of the benefits of Yoga Nidra</b>\n
        Yoga Nidra counteracts stress and prescribed by GPs in many countries\n
        Provides effective relief for depression and long standing anxiety.\n
        It is an efficient way to obtain sleep.\n
        Clears the mind for learning and absorbing new material.\n
        Releases tension for body and mind.\n
        Relaxes the mind.\n
        Helps with creativity.\n
    </string>
    <string name="hygiene_info">
        Cleansing the body inside out plays a very important role in boosting the Immune System. <b>Shat-Kriya</b> is an ancient yogic technique to cleanse the body.\n
        \nIn Sanskrit ‘Shat’ means six and ‘Kriya’ means internal action, these are the main cleansing techniques used in yoga. (Sometimes called ‘shat karmas’ also meaning the ‘six actions’ of cleansing).\n
        <b>The six cleansing processes are:</b>\n
        Kapalabhati -An active breathing technique.\n
        Neti – Cleaning the nasal cavity using salt water, or a thread\n
        Nauli – Massaging the internal organs by creating a vacuum an using the abdominal muscles ; also read about Agnisar kriya and uddiyan bandha kriya to prepare for nauli.\n
        Trataka – Extended gazing at a fixed point usually the tip of a flame\n
        Dhauti – Washing the alimentary canal\n
        Basti – Yogic enema\n
    </string>
    <string name="selfcheck">Self Check</string>
    <string name="selfcheck_description">Fill out the answers to the following questions to judge our health.</string>
    <string name="about_heal">HEAL is a personal guide to Holistic, Health and Happiness. It can help you to focus on your mental and physical health, thus, boosting your immunity.\n
        The main factors that affect the immunity are :</string>
    <string-array name="quotes_home">
        <item>“Health is a state of complete mental, social and physical well-being, not merely the absence of disease or infirmity.”</item>
        <item>“Health combines harmony of the body, mind and spirit. When one is free from disabilities and mental distractions, the gates of the soul open.”</item>
        <item>“To keep the body in good health is a duty…otherwise we shall not be able to keep the mind strong and clear.”</item>
    </string-array>
    <string-array name="quotes_psycho">
        <item>“You can’t control what goes on outside, but you CAN control what goes on inside.”</item>
        <item>“Instead of saying, I’m damaged, I’m broken, say I’m healing, I’m rediscovering myself, I’m starting over.”</item>
        <item>"The goal of meditation isn’t to control your thoughts, it’s to stop letting them control you."</item>
    </string-array>
    <string-array name="quotes_physical">
        <item>"Physical fitness is not only one of the most important keys to a healthy body, it is the basis of dynamic and creative intellectual activity."</item>
        <item>"The soul always knows what to do to heal itself. The challenge is to silence the mind."</item>
        <item>"The quieter you become the more you can hear."</item>
    </string-array>
    <string name="instruct_moti">
        Motivate yourself with a message you want to remind yourself.\nType a message and set the time, and you will receive the motivation mantra then.\n
    </string>
    <string name="motivationMantra">Motivation Mantra</string>
    <string name="msg_moti">Type your Mantra here</string>
    <string name="instruct_nidra">Follow the instructions in the music and practice Yog Nidra for complete rest and a peaceful sleep</string>
    <string name="next">Next</string>
    <string name="setTime">Set Time</string>
    <string name="cancelAlarm">Cancel Alarm</string>
    <string name="detail_heading">Lets See what the HEAL App has to offer to you</string>
    <string name="about_selfcheck">Questionnaire which helps you to know about yourself in a better manner.</string>
    <string name="about_info">Information / More knowledge on the topic.</string>
    <string name="about_alarm">Set a Motivation Mantra which you would receive everyday to keep yourself motivated.</string>
    <string name="about_exercise">Contains Yoga Postures and Exercises to keep you fit and healthy.</string>
    <string name="about_meditation">Calm yourself by doing Meditation along with the music given.</string>
    <string name="about_yognidra">Sleep peacefully by doing Yog Nidra along with the Music Track given.</string>
    <string name="yogNidra">Yog Nidra</string>
    <string name="about">About</string>
    <string name="settings">Settings</string>
    <string name="shareApp">Share App</string>
    <string name="about_calendar">About Calendar</string>
    <string name="adjustSettings">Adjust the following for Text-to-Speech</string>
    <string name="adjustSpeed">Adjust Speed</string>
    <string name="adjustPitch">Adjust Pitch</string>
</resources>