<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home_black_24dp"
            android:title="@string/menu_home"
            />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/physical_heading" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_mood_black_24dp"
            android:title="@string/psycho_heading" />
    </group>

    <item android:title="Other Factors">
        <menu>
            <item
                android:id="@+id/nav_tools"
                android:icon="@drawable/ic_local_dining_black_24dp"
                android:title="@string/nutrition_heading" />
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_airline_seat_individual_suite_black_24dp"
                android:title="@string/sleep_heading" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_favorite_black_24dp"
                android:title="@string/hygiene_heading"/>
        </menu>
    </item>

</menu>
