<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_about"
        android:orderInCategory="100"
        android:title="@string/about"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/settings"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_share"
        android:orderInCategory="100"
        android:title="@string/shareApp"
        app:showAsAction="never"/>

    <item
        android:id="@+id/action_credits"
        android:orderInCategory="100"
        android:title="@string/action_credits"
        app:showAsAction="never"/>


</menu>
