<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/elem_backblur"
    tools:context=".SleepAlarm">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:padding="20dp"
        android:background="@drawable/transfront"
        >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/yogNidra"
            android:textSize="30sp"
            android:layout_margin="10dp"
            android:textAlignment="center"
            android:textColor="@color/colorPrimaryDark"/>

        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="#FFF"
            />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/instruct_nidra"
            android:textSize="20sp"
            android:textAlignment="center"
            android:textColor="#222"
            />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_margin="20dp"
            android:layout_gravity="center_vertical"
            android:gravity="center_vertical"
            android:src="@drawable/elem_back"
            />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:gravity="center"
            >

            <ImageView
                android:id="@+id/sleep_music_stop"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_stop_black_24dp"
                android:layout_weight=".50"
                android:background="@color/darkbluishblack"
                />

            <ImageView
                android:id="@+id/sleep_music_play_pause"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_play"
                android:layout_weight=".50"
                android:background="@color/darkbluishblack"
                />

            <ImageView
                android:id="@+id/sleep_music_next"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="bottom"
                android:layout_marginBottom="0dp"
                android:src="@drawable/ic_skip_next_black_24dp"
                android:background="@color/darkbluishblack"
                android:layout_weight=".50"
                android:contentDescription="@string/next"
                />

        </LinearLayout>
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginBottom="20dp"
            android:background="#FFF"
            />

    </LinearLayout>

</LinearLayout>